* Changelog

** Unreleased

*** Added:
  - Open configured files on Emacs load without =desktop-save-mode= state.
  - Command to exit =Emacs= and reset =desktop-save-mode= state.
  - Confirm before killing non-empty =*scratch*= buffer.
  - Keybinding to toggle =scroll-lock-mode=.
  - Auto-insert closing /parenthesis/.
  - Configure =Gnus= as a mailing lists reader.
  - Enable =GNU-devel ELPA= packages repository.
  - Query =GnuPG Pinentry= passphrase through the Emacs minibuffer.
  - Install =debbugs= package.
  - Mac OS: files removed by =Finder=, hence with "Put Back" feature enabled.
  - Enable =Rmail= email client.
  - Load OS specific /font/.
  - Configured to use four spaces for /indentation/.
  - Show column number in the /mode line/.
  - Highlight trailing whitespaces in =prog-mode=, =conf-mode= and =text-mode=.
  - Support /optional local file/ loaded in the end of the initialization.
  - Highlight =Rust= and =PHP= programming languages syntax.
  - Add =rust-mode= key bindings.
  - Add =rainbow-mode= package for color names colorization.
  - =lisp-mode=: on =TAB= hit show possible completions (or indent line).

*** Changed:
  - Move =desktop-save-mode= settings to ~init-lifecycle.el~.
  - Improve /search/ experience.
  - Increase default /font size/.
  - Disable beginner-friendly /scrolling/ settings.
  - /Frames/ default width slightly balanced.
  - Use package =exec-path-from-shell= to load user's shell environment variables.
  - =markdown-mode=: use ~multimarkdown~ parser (if available).
  - Rename ~private-init.el~ to ~local-pre-init.el~ to reflect order of loading.
  - Improve =minibuffer= usability.
  - Improve =misterioso-theme= colors for better usability.

*** Removed:
  - Dependency on =exec-path-from-shell= package.
  - Dependency on =osx-trash= package.
  - Example configuration of =mu4e= email client.

*** Fixed:
  - Minor modes enabling.


** v1.0.0 - 2021-02-21

Configuration improved for text manipulation tasks.

Compatible with Emacs 27.
