@@ -10,3 +10,4 @@
 !LICENSE
 !CHANGELOG.org
 !/images
+!/examples
